--- a/.github/workflows/scraper.yml
+++ b/.github/workflows/scraper.yml
@@ -2,8 +2,8 @@ name: Daily Selenium Scraper
 
 on:
   schedule:
-    - cron: "0 9 * * *"   # ✅ Runs daily at 2:30 PM IST (09:00 UTC)
-  workflow_dispatch:        # ✅ Allows manual trigger from Actions tab
+    - cron: "30 1 * * *"   # Runs daily at 07:00 AM IST (01:30 UTC)
+  workflow_dispatch:        # Allows manual run from Actions tab
 
 jobs:
   run-scraper:
@@ -20,38 +20,31 @@ jobs:
         with:
           python-version: "3.10"
 
-      # ✅ Step 3: Install Chromium & ChromeDriver for Selenium
-      - name: Install Chromium & ChromeDriver
+      # ✅ Step 3: Install dependencies + Chromium
+      - name: Install dependencies
         run: |
           sudo apt-get update
           sudo apt-get install -y chromium-browser chromium-chromedriver
-          echo "Chromium path: $(which chromium-browser)"
-          echo "ChromeDriver path: $(which chromedriver)"
-
-      # ✅ Step 4: Install Python dependencies
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
+          which chromium-browser
+          which chromedriver
           pip install -r requirements.txt
 
-      # ✅ Step 5: Create Google Sheets credentials
+      # ✅ Step 4: Create Google Sheets credentials
       - name: Create Google credentials file
         run: echo '${{ secrets.GOOGLE_CREDENTIALS }}' > credentials.json
 
-      # ✅ Step 6: Show current UTC & IST times
-      - name: Show current time
+      # ✅ Step 5: Capture current IST time
+      - name: Get current time in IST
         id: runtime
         run: |
-          echo "✅ UTC time: $(date -u '+%Y-%m-%d %H:%M:%S UTC')"
           export TZ=Asia/Kolkata
-          echo "✅ IST time: $(date '+%Y-%m-%d %H:%M:%S %Z')"
           echo "now=$(date '+%Y-%m-%d %H:%M:%S %Z')" >> $GITHUB_OUTPUT
 
-      # ✅ Step 7: Run the Selenium scraper
-      - name: Run Selenium scraper
+      # ✅ Step 6: Run the Selenium scraper
+      - name: Run scraper
         run: python attendence_V4.py
 
-      # ✅ Step 8: Send Email Notification (always runs)
+      # ✅ Step 7: Send email notification with modern icons
       - name: Send email notification
         if: always()
         uses: dawidd6/action-send-mail@v3
@@ -60,32 +53,194 @@ jobs:
           server_port: 465
           username: ${{ secrets.MAIL_USERNAME }}
           password: ${{ secrets.MAIL_PASSWORD }}
-          subject: "Daily Selenium Scraper - Status: ${{ job.status }}"
+          subject: "Selenium Scraper Finished (Status: ${{ job.status }})"
           to: kasabunikil@gmail.com
           from: "GitHub Actions Bot <${{ secrets.MAIL_USERNAME }}>"
           html_body: |
             <!DOCTYPE html>
-            <html>
-            <body style="font-family: Arial, sans-serif; font-size: 14px; color: #333;">
-              <h2>✅ Daily Attendance Scraper Report</h2>
-              <p>📅 <b>Date/Time (IST):</b> ${{ steps.runtime.outputs.now }}</p>
-              <p>📌 <b>Status:</b> <b>${{ job.status }}</b></p>
-              <p>📄 <b>Google Sheet:</b> 
-                <a href="https://docs.google.com/spreadsheets/d/13ZP7Q9-Yc4mFM64zGosg0CZYWtwWq2RlL9piU2B7qeY/edit?gid=728086314#gid=728086314">
-                  Open Attendance Sheet
-                </a>
-              </p>
-              <p>📜 <b>Logs:</b> 
-                <a href="${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}">
-                  View Full Logs
-                </a>
-              </p>
-              <p>🔄 <b>Retry:</b> 
-                <a href="${{ github.server_url }}/${{ github.repository }}/actions">
-                  Run Workflow Again
-                </a>
-              </p>
-              <hr>
-              <small>Automated Email via GitHub Actions 🤖</small>
+            <html lang="en">
+            <head>
+              <meta charset="UTF-8">
+              <meta name="viewport" content="width=device-width, initial-scale=1.0">
+              <title>Daily Attendance Scraper Report</title>
+              <style>
+                body {
+                  font-family: Arial, sans-serif;
+                  margin: 0;
+                  padding: 0;
+                  background-color: #f5f8fa;
+                  font-size: 12px;
+                }
+                .container {
+                  max-width: 400px;
+                  margin: 10px auto;
+                  background-color: #ffffff;
+                  border-radius: 14px;
+                  border: 1px solid #e6ecf0;
+                  overflow: hidden;
+                }
+                .header-img {
+                  width: 100%;
+                  height: 70px;
+                  object-fit: cover;
+                  display: block;
+                  border-bottom: 1px solid #e6ecf0;
+                }
+                .report-header {
+                  text-align: center;
+                  padding: 8px;
+                  background: #f9fbfc;
+                  border-bottom: 1px solid #e6ecf0;
+                }
+                .report-header h2 {
+                  margin: 0;
+                  font-size: 14px;
+                  font-weight: bold;
+                  color: #14171a;
+                }
+                .report-header p {
+                  margin: 2px 0;
+                  font-size: 11px;
+                  color: #657786;
+                }
+                .content {
+                  padding: 10px 12px;
+                  color: #14171a;
+                  font-size: 12px;
+                  line-height: 1.5;
+                }
+                .status-box {
+                  margin: 10px 0;
+                  padding: 6px;
+                  background: #f1f8ff;
+                  border-left: 3px solid #1da1f2;
+                  border-radius: 8px;
+                  font-size: 12px;
+                }
+                .buttons {
+                  text-align: center;
+                  margin: 12px 0;
+                }
+                .btn {
+                  display: inline-block;
+                  padding: 3px 90px;
+                  margin: 4px;
+                  text-decoration: none;
+                  color: #ffffff;
+                  border-radius: 20px;
+                  font-size: 12px;
+                  font-weight: bold;
+                }
+                .btn-blue {
+                  background-color: #657786;
+                  padding: 3px 87px;
+                }
+                .btn-red {
+                  background-color: red;
+                  padding: 3px 94px;
+                }
+                .btn-gray {
+                  background-color: #1da1f2;
+                  padding: 3px 80px;
+                }
+                .footer {
+                  text-align: center;
+                  padding: 6px;
+                  font-size: 11px;
+                  color: #657786;
+                  border-top: 1px solid #e6ecf0;
+                }
+                .icon {
+                  vertical-align: middle;
+                  margin-right: 4px;
+                }
+              </style>
+            </head>
+            <body>
+              <div class="container">
+                <!-- Header Image -->
+                <img src="https://images.unsplash.com/photo-1557989048-03456d01a26e?w=600&auto=format&fit=crop&q=60"
+                     alt="Attendance" class="header-img">
+
+                <!-- Header -->
+                <div class="report-header">
+                  <h2>Daily Attendance Scraper Report</h2>
+                  <p>${{ github.event_name }} | Run #${{ github.run_number }}</p>
+                </div>
+
+                <!-- Content -->
+                <div class="content">
+                  <strong>Hello Nikki,</strong>
+                  <p>The Selenium scraper has finished running.</p>
+
+                  <!-- Status Box -->
+                  <div class="status-box">
+                    <!-- Status icon -->
+                    <svg class="icon" xmlns="http://www.w3.org/2000/svg" width="14" height="14" fill="none" stroke="#1da1f2" stroke-width="2" viewBox="0 0 24 24">
+                      <circle cx="12" cy="12" r="10"/>
+                      <polyline points="12 6 12 12 16 14"/>
+                    </svg>
+                    <strong>Status:</strong> <b>${{ job.status }}</b><br>
+
+                    <!-- Clock icon -->
+                    <svg class="icon" xmlns="http://www.w3.org/2000/svg" width="14" height="14" fill="none" stroke="#1da1f2" stroke-width="2" viewBox="0 0 24 24">
+                      <circle cx="12" cy="12" r="10"/>
+                      <polyline points="12 6 12 12 16 14"/>
+                    </svg>
+                    <strong>Run Time:</strong> ${{ steps.runtime.outputs.now }}
+                  </div>
+
+                  <p>
+                    <!-- Document icon -->
+                    <svg class="icon" xmlns="http://www.w3.org/2000/svg" width="14" height="14" fill="none" stroke="#1da1f2" stroke-width="2" viewBox="0 0 24 24">
+                      <path d="M14 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V8z"/>
+                      <polyline points="14 2 14 8 20 8"/>
+                    </svg>
+                    Click below to view:
+                  </p>
+
+                  <!-- Buttons -->
+                  <div class="buttons">
+                    <!-- Google Sheet -->
+                    <a href="https://docs.google.com/spreadsheets/d/13ZP7Q9-Yc4mFM64zGosg0CZYWtwWq2RlL9piU2B7qeY/edit?gid=728086314#gid=728086314"
+                       class="btn btn-blue">
+                      <svg class="icon" xmlns="http://www.w3.org/2000/svg" width="14" height="14" fill="none" stroke="#fff" stroke-width="2" viewBox="0 0 24 24">
+                        <path d="M3 3h18v18H3z"/>
+                        <path d="M3 9h18M9 21V9"/>
+                      </svg>
+                      Open Sheet
+                    </a><br>
+
+                    <!-- Logs Link -->
+                    <a href="${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}"
+                       class="btn btn-red">
+                      <svg class="icon" xmlns="http://www.w3.org/2000/svg" width="14" height="14" fill="none" stroke="#fff" stroke-width="2" viewBox="0 0 24 24">
+                        <path d="M4 4h16v16H4z"/>
+                        <path d="M8 8h8v8H8z"/>
+                      </svg>
+                      View Logs
+                    </a><br>
+
+                    <!-- Retry Link -->
+                    <a href="${{ github.server_url }}/${{ github.repository }}/actions"
+                       class="btn btn-gray">
+                      <svg class="icon" xmlns="http://www.w3.org/2000/svg" width="14" height="14" fill="none" stroke="#fff" stroke-width="2" viewBox="0 0 24 24">
+                        <polyline points="1 4 1 10 7 10"/>
+                        <polyline points="23 20 23 14 17 14"/>
+                        <path d="M20.49 9A9 9 0 0 0 6.21 4.56L1 10m22 4l-5.21 5.44A9 9 0 0 1 3.51 15"/>
+                      </svg>
+                      Retry Workflow
+                    </a>
+                  </div>
+
+                  <p>Stay updated easily!</p>
+                  <p>Cheers,<br>Automation Bot</p>
+                </div>
+
+                <!-- Footer -->
+                <div class="footer">
+                  Auto Email | GitHub Actions
+                </div>
+              </div>
             </body>
             </html>
